--- a/backend/bible-verse/src/main/resources/application.properties
+++ b/backend/bible-verse/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:sqlserver://sjbfreeserver.database.windows.net:1433;database=bibleverse;user=stefanjb@sjbfreeserver;password=Stefan1995;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+#spring.datasource.username=stefanjb
+#spring.datasource.password=Stefan1995
 
+spring.jpa.hibernate.ddl-auto=update
