--- a/backend/bible-verse/pom.xml
+++ b/backend/bible-verse/pom.xml
@@ -19,6 +19,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
+	    	<groupId>jakarta.xml.bind</groupId>
+	    	<artifactId>jakarta.xml.bind-api</artifactId>
+	    	<version>3.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
